<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/item_tv_day"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintEnd_toStartOf="@+id/item_tv_alarm_time"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_alarm_label"
                tools:text="Today" />

            <TextView
                android:id="@+id/item_tv_alarm_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@+id/item_tv_day"
                app:layout_constraintEnd_toStartOf="@+id/item_btn_switch"
                app:layout_constraintStart_toEndOf="@+id/item_tv_day"
                app:layout_constraintTop_toTopOf="@+id/item_tv_day"
                tools:text="@string/alarm_time" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/item_btn_switch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                app:layout_constraintBottom_toBottomOf="@+id/item_tv_alarm_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/item_tv_alarm_time"
                app:layout_constraintTop_toTopOf="@+id/item_tv_alarm_time" />

            <LinearLayout
                android:id="@+id/item_layout_repeat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:gravity="start"
                android:orientation="horizontal"
                android:padding="5dp"
                android:weightSum="7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_btn_switch">

                <TextView
                    android:id="@+id/item_tv_mo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/monday"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/item_tv_tu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tuesday"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/item_tv_we"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wednesday"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/item_tv_th"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thursday"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/item_tv_fr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/friday"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/item_tv_sa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/saturday"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/item_tv_su"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunday"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:visibility="gone" />
            </LinearLayout>

            <TextView
                android:id="@+id/item_alarm_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/new_alarm_name"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/item_show_options_menu"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/item_show_options_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/three_vertical_dots"
                android:textAppearance="?android:textAppearanceLarge"
                android:textSize="34sp"
                app:layout_constraintBottom_toBottomOf="@+id/item_alarm_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/item_alarm_label"
                app:layout_constraintTop_toTopOf="@+id/item_alarm_label" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>