<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.RingActivity">

        <TextView
            android:id="@+id/tv_ring_alarm_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="23:18" />

        <TextView
            android:id="@+id/tv_ring_alarm_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_ring_alarm_time"
            tools:text="No Label" />

        <ImageButton
            android:id="@+id/btn_ring_dismiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description_dismiss"
            android:src="@drawable/ic_close"
            android:text="@string/dismiss"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/iv_snooze_dismiss"
            app:layout_constraintTop_toBottomOf="@+id/tv_ring_alarm_label" />


        <ImageView
            android:id="@+id/iv_snooze_dismiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/iv_ring_snooze_dismiss"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_ring_dismiss"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_ring_snooze"
            app:layout_constraintTop_toBottomOf="@+id/tv_ring_alarm_label"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <ImageButton
            android:id="@+id/btn_ring_snooze"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description_snooze"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/iv_snooze_dismiss"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_ring_alarm_label"
            app:srcCompat="@drawable/ic_snooze" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>